# edukids-screenshot

./: .gitignore  README.md  fix-git-history.sh  package.json  vite.config.ts
.github/workflows/: build-windows.yml
app-tauri/: cargo-errors.txt  cargo-errors2.txt  cargo-errors3.txt  index.html  package-lock.json  package.json  vite.config.ts
app-tauri/.cargo-tmp/: .global-cache
app-tauri/.cargo-tmp/registry/cache/index.crates.io-1949cf8c6b5b557f/: core-graphics-0.22.3.crate  core-graphics-0.25.0.crate  dispatch2-0.3.1.crate  display-info-0.4.8.crate  embed-resource-3.0.7.crate  erased-serde-0.4.10.crate  global-hotkey-0.7.0.crate  http-range-0.1.5.crate  ico-0.5.0.crate  objc2-0.6.4.crate  screenshots-0.8.10.crate  (+15 more)
app-tauri/.omx/: metrics.json
app-tauri/.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
app-tauri/docs/: PLAN-tauri-dev-visibility.md
app-tauri/scripts/: ensure-vite-dev.mjs  generate-brand-assets.mjs
app-tauri/src/: App.tsx  idb.ts  index.css  vite-env.d.ts
app-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app-tauri/src-tauri/capabilities/: default.json
app-tauri/src-tauri/icons/: icon.icns
app-tauri/src-tauri/src/: commands.rs  lib.rs  recording.rs  tray.rs
app-tauri/src/components/: AppLogo.tsx  CanvasEditor.tsx  FfmpegInstallModal.tsx  OverlayEditor.tsx  PermissionGuide.tsx  RecordingBar.tsx  RecordingPreview.tsx  Toolbar.tsx
electron/: main.ts  preload.ts
src/: App.tsx
src/components/: CanvasEditor.tsx  OverlayEditor.tsx  PermissionGuide.tsx  Toolbar.tsx
(+103 files in other folders)
